--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,9 @@
 # Metadata for your course
 
-title: # a name for your Learning Lab course
-tagline: # a short description for your Learning Lab course, displayed on the course catalog
-description: # a longer description for your Learning Lab course, displayed on the course's landing page
+title: SVN to Git
+# a name for your Learning Lab course
+tagline: Yup # a short description for your Learning Lab course, displayed on the course catalog
+description: Can Describe # a longer description for your Learning Lab course, displayed on the course's landing page
 
 # Repository setup
 # The following section template information for the repository
@@ -25,11 +26,25 @@ before:
 # Create one step for each action that a learner will complete
 
 steps:
-- title: # the title of the step, shown to the learner in the course progress page
-  description: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
-  event: # a list of the actions that will occur when the step is triggered by an event
+- title: Create a branch
+  # the title of the step, shown to the learner in the course progress page
+  description: Learn how branches are different in Git vs SVN
+  # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
+  event: create
+  # a list of the actions that will occur when the step is triggered by an event
   actions:
-  - type: # the type of action, full list at https://lab.github.com/docs/actions
+  - type: gate
+    left: '%payload.ref_type%'
+    operand: ===
+    right: branch
+    else:
+      - type: respond
+        message: bar.md
+        data:
+          actual_type: '%payload.ref_type%'
+  - type: respond
+    message: foo.md
+  # the type of action, full list at https://lab.github.com/docs/actions
   # some actions require additional options, those should appear below `type:`
   # you can execute multiple actions in the `before` block
   #
